--- a/action.yaml
+++ b/action.yaml
@@ -61,7 +61,7 @@ runs:
         IFS=',' read -ra ADDR <<< "${{ inputs.images }}"
         for i in "${ADDR[@]}"; do
           echo "Processing $i"
-          docker pull ${{ $i }}:${{ inputs.pull-tag }}
+          docker pull $i:${{ inputs.pull-tag }}
         done
     - name: Tag Images
       shell: bash
@@ -69,7 +69,7 @@ runs:
         IFS=',' read -ra ADDR <<< "${{ inputs.images }}"
         for i in "${ADDR[@]}"; do
           echo "Processing $i"
-          docker tag ${{ $i }}:${{ inputs.pull-tag }} ${{ $i }}:${{ inputs.publish-tag }}
+          docker tag $i:${{ inputs.pull-tag }} $i:${{ inputs.publish-tag }}
         done
     - name: Docker Push
       shell: bash
@@ -77,5 +77,5 @@ runs:
         IFS=',' read -ra ADDR <<< "${{ inputs.images }}"
         for i in "${ADDR[@]}"; do
           echo "Processing $i"
-          docker push ${{ $i }}:${{ inputs.publish-tag }}
+          docker push $i:${{ inputs.publish-tag }}
         done
